Improve error logging
