# docs/openapi.yml
@@ -23,6 +23,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/CategoryList"
+        "default":
+          $ref: "#/components/responses/Error"
 
   /public/categories/{id}/:
     parameters:
@@ -41,6 +43,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Category"
+        "default":
+          $ref: "#/components/responses/Error"
 
   /admin/categories/:
     get:
@@ -56,6 +60,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/CategoryList"
+        "default":
+          $ref: "#/components/responses/Error"
     post:
       operationId: admin_add_category
       description: Add category
@@ -73,6 +79,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Category"
+        "default":
+          $ref: "#/components/responses/Error"
 
   /admin/categories/{id}/:
     parameters:
@@ -90,6 +98,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Category"
+        "default":
+          $ref: "#/components/responses/Error"
     put:
       operationId: admin_update_category
       description: Update category
@@ -107,6 +117,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Category"
+        "default":
+          $ref: "#/components/responses/Error"
     delete:
       operationId: admin_delete_category
       description: Delete category
@@ -114,6 +126,8 @@ paths:
       responses:
         "204":
           description: No Content
+        "default":
+          $ref: "#/components/responses/Error"
 
   /admin/categories/{id}/image/:
     parameters:
@@ -141,6 +155,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Image"
+        "default":
+          $ref: "#/components/responses/Error"
     delete:
       operationId: admin_delete_category_image
       description: Delete image
@@ -148,6 +164,8 @@ paths:
       responses:
         "204":
           description: No Content
+        "default":
+          $ref: "#/components/responses/Error"
 
   /public/manufacturers/:
     get:
@@ -164,6 +182,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ManufacturerList"
+        "default":
+          $ref: "#/components/responses/Error"
 
   /public/manufacturers/{id}/:
     parameters:
@@ -182,6 +202,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Manufacturer"
+        "default":
+          $ref: "#/components/responses/Error"
 
   /admin/manufacturers/:
     get:
@@ -197,6 +219,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ManufacturerList"
+        "default":
+          $ref: "#/components/responses/Error"
     post:
       operationId: admin_add_manufacturer
       description: Add manufacturer
@@ -214,6 +238,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Manufacturer"
+        "default":
+          $ref: "#/components/responses/Error"
 
   /admin/manufacturers/{id}/:
     parameters:
@@ -231,6 +257,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Manufacturer"
+        "default":
+          $ref: "#/components/responses/Error"
     put:
       operationId: admin_update_manufacturer
       description: Update manufacturer
@@ -248,6 +276,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Manufacturer"
+        "default":
+          $ref: "#/components/responses/Error"
     delete:
       operationId: admin_delete_manufacturer
       description: Delete manufacturer
@@ -255,6 +285,8 @@ paths:
       responses:
         "204":
           description: No Content
+        "default":
+          $ref: "#/components/responses/Error"
 
   /admin/manufacturers/{id}/image/:
     parameters:
@@ -282,6 +314,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Image"
+        "default":
+          $ref: "#/components/responses/Error"
     delete:
       operationId: admin_delete_manufacturer_image
       description: Delete image
@@ -289,6 +323,8 @@ paths:
       responses:
         "204":
           description: No Content
+        "default":
+          $ref: "#/components/responses/Error"
 
   /public/products/:
     get:
@@ -305,6 +341,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ProductList"
+        "default":
+          $ref: "#/components/responses/Error"
 
   /public/products/{id}/:
     parameters:
@@ -324,6 +362,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ResolvedProduct"
+        "default":
+          $ref: "#/components/responses/Error"
 
   /admin/products/:
     get:
@@ -339,6 +379,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ProductList"
+        "default":
+          $ref: "#/components/responses/Error"
     post:
       operationId: admin_add_product
       description: Add product
@@ -356,6 +398,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Product"
+        "default":
+          $ref: "#/components/responses/Error"
 
   /admin/products/{id}/:
     parameters:
@@ -374,6 +418,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ResolvedProduct"
+        "default":
+          $ref: "#/components/responses/Error"
     put:
       operationId: admin_update_product
       description: Update product
@@ -391,6 +437,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Product"
+        "default":
+          $ref: "#/components/responses/Error"
     delete:
       operationId: admin_delete_product
       description: Delete product
@@ -398,6 +446,8 @@ paths:
       responses:
         "204":
           description: No Content
+        "default":
+          $ref: "#/components/responses/Error"
 
   /admin/products/{id}/images/:
     parameters:
@@ -414,6 +464,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ImageList"
+        "default":
+          $ref: "#/components/responses/Error"
     post:
       operationId: admin_add_product_images
       description: Add product images
@@ -436,6 +488,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ImageList"
+        "default":
+          $ref: "#/components/responses/Error"
 
   /admin/products/{id}/images/{image_id}/:
     parameters:
@@ -462,6 +516,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ImageList"
+        "default":
+          $ref: "#/components/responses/Error"
     delete:
       operationId: admin_delete_product_image
       description: Delete product image
@@ -469,6 +525,8 @@ paths:
       responses:
         "204":
           description: No Content
+        "default":
+          $ref: "#/components/responses/Error"
 
 components:
   parameters:
@@ -547,6 +605,61 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/Category"
+
+    Error:
+      type: object
+      required:
+        - code
+        - message
+      properties:
+        code:
+          $ref: "#/components/schemas/ErrorCode"
+        message:
+          description: Human-readable description of the error
+          type: string
+          example: Provided authentication token is invalid
+        instance:
+          description: Object to which this error is related
+          type: string
+          example: ""
+
+    ErrorCode:
+      description: |
+        - CATEGORY_NAME_EMPTY: Category name is required and cannot be empty
+        - CATEGORY_ORDER_NEGATIVE: Category order should be a positive integer
+        - CATEGORY_PARENT_ID_INVALID: Parent ID of the category is invalid
+        - IMAGE_ORDER_NEGATIVE: Image order should be a positive integer
+        - INVALID_AUTH_TOKEN: Provided authentication token is invalid
+        - INVALID_ID: Provided short ID or UUID is invalid
+        - MISSING_ADMIN_ROLE: Required role "admin" is missing on provided authentication token
+        - PRODUCT_CATEGORY_IDS_INVALID: Category ID's of product are invalid
+        - PRODUCT_MANUFACTURER_ID_INVALID: Manufacturer ID of the product is invalid
+        - PRODUCT_NAME_EMPTY: Product name is required and cannot be empty
+        - PRODUCT_PRICE_NEGATIVE: Product price should be a positive integer
+        - UNKNOWN_CATEGORY: The category does not exist
+        - UNKNOWN_ERROR: An unknown error occurred
+        - UNKNOWN_IMAGE: The image does not exist
+        - UNKNOWN_MANUFACTURER: The manufacturer does not exist
+        - UNKNOWN_PRODUCT: The product does not exist
+      type: string
+      example: INVALID_AUTH_TOKEN
+      enum:
+        - CATEGORY_NAME_EMPTY
+        - CATEGORY_ORDER_NEGATIVE
+        - CATEGORY_PARENT_ID_INVALID
+        - IMAGE_ORDER_NEGATIVE
+        - INVALID_AUTH_TOKEN
+        - INVALID_ID
+        - MISSING_ADMIN_ROLE
+        - PRODUCT_CATEGORY_IDS_INVALID
+        - PRODUCT_MANUFACTURER_ID_INVALID
+        - PRODUCT_NAME_EMPTY
+        - PRODUCT_PRICE_NEGATIVE
+        - UNKNOWN_CATEGORY
+        - UNKNOWN_ERROR
+        - UNKNOWN_IMAGE
+        - UNKNOWN_MANUFACTURER
+        - UNKNOWN_PRODUCT
 
     Header:
       type: object
@@ -733,10 +846,18 @@ components:
       description: Compressed representation of ID
       example: "AneTxNh7GB5uD2HoXvwF2E"
 
+  responses:
+    Error:
+      description: Default error response
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/Error"
+
   securitySchemes:
-    basicAuth:
-      type: http
-      scheme: basic
+    localAuth:
+      type: openIdConnect
+      openIdConnectUrl: http://localhost:9001/auth/realms/go-commerce/.well-known/openid-configuration
 
 security:
-  - basicAuth: []
+  - localAuth: []
